<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_posts">

    <navigation
        android:id="@+id/navigation_my_posts"
        app:startDestination="@id/my_posts" >
        <fragment
            android:id="@+id/my_posts"
            android:name="com.example.bazaar.ui.myPosts.MyPostsFragment"
            android:label="@string/title_my_posts"
            tools:layout="@layout/fragment_my_posts">
            <action
                android:id="@+id/my_posts_to_one_post"
                app:destination="@+id/one_post_for_my_post"
                />
        </fragment>
        <fragment
            android:id="@+id/one_post_for_my_post"
            android:name="com.example.bazaar.ui.myPosts.OnePost.OnePostFragment"
            android:label="@string/title_one_post"
            tools:layout="@layout/fragment_one_post" />
    </navigation>

    <navigation
        android:id="@+id/navigation_search"
        app:startDestination="@id/search" >
        <fragment
            android:id="@+id/search"
            android:name="com.example.bazaar.ui.search.SearchCriteriaFragment"
            android:label="@string/title_search"
            tools:layout="@layout/fragment_search_criteria" >
            <action
                android:id="@+id/search_criteria_to_search_results"
                app:destination="@+id/search_results"
                />
        </fragment>
        <fragment
            android:id="@+id/search_results"
            android:name="com.example.bazaar.ui.search.SearchResultsFragment"
            android:label="@string/title_search_results"
            tools:layout="@layout/fragment_search_results" >
            <action
                android:id="@+id/search_result_to_one_post"
                app:destination="@+id/one_post_for_search"
                />
        </fragment>
        <fragment
            android:id="@+id/one_post_for_search"
            android:name="com.example.bazaar.ui.search.OnePost.OnePostFragment"
            android:label="@string/title_one_post"
            tools:layout="@layout/fragment_one_post"/>
    </navigation>


    <navigation
        android:id="@+id/navigation_create_post"
        app:startDestination="@id/create_post" >
        <fragment
            android:id="@+id/create_post"
            android:name="com.example.bazaar.ui.createPost.PostCriteriaFragment"
            android:label="@string/title_post"
            tools:layout="@layout/fragment_criteria_create_post" >
            <action
                android:id="@+id/action_post_criteria_to_post_info"
                app:destination="@+id/navigation_post_information"
                />
        </fragment>

        <fragment
            android:id="@+id/navigation_post_information"
            android:name="com.example.bazaar.ui.createPost.CreatePostFragment"
            android:label="@string/title_post_information"
            tools:layout="@layout/fragment_create_post"/>
    </navigation>

</navigation>