<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <TextView
        android:id="@+id/search_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchHelpText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/location_help_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_edit_text"/>
    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/search_help_text"
        app:layout_constraintBottom_toBottomOf="@id/search_help_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_help_text"
        />
    <TextView
        android:id="@+id/location_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationHelpText"
        app:layout_constraintTop_toBottomOf="@id/search_help_text"
        app:layout_constraintBottom_toTopOf="@id/categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/location_edit_text"/>
    <EditText
        android:id="@+id/location_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/location_help_text"
        app:layout_constraintBottom_toBottomOf="@id/location_help_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/location_help_text"
        />

    <RadioGroup
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/location_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton android:id="@+id/radio_apartments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apartments"
            android:checked="true"/>
        <RadioButton android:id="@+id/radio_video_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_games" />
        <RadioButton android:id="@+id/radio_electronics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electronics" />
        <RadioButton android:id="@+id/radio_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools" />
        <RadioButton android:id="@+id/radio_collectible_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collectible_cards" />
    </RadioGroup>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue"
        app:layout_constraintTop_toBottomOf="@id/categories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>