<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.postInformation.PostInformationFragment">

    <TextView
        android:id="@+id/title_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_help_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description_help_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/title_edit_text"/>
    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/title_help_text"
        app:layout_constraintBottom_toBottomOf="@id/title_help_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_help_text"
        />

    <TextView
        android:id="@+id/description_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_help_text"
        app:layout_constraintTop_toBottomOf="@id/title_help_text"
        app:layout_constraintBottom_toTopOf="@id/price_help_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/description_edit_text"/>
    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/description_help_text"
        app:layout_constraintBottom_toBottomOf="@id/description_help_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/description_help_text"
        />

    <TextView
        android:id="@+id/price_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_apt_help_text"
        app:layout_constraintTop_toBottomOf="@id/description_help_text"
        app:layout_constraintBottom_toTopOf="@id/sq_feet_help_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/price_edit_text"/>
    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="@id/price_help_text"
        app:layout_constraintBottom_toBottomOf="@id/price_help_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/price_help_text"
        />

    <TextView
        android:id="@+id/sq_feet_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sq_feet_help_text"
        app:layout_constraintTop_toBottomOf="@id/price_help_text"
        app:layout_constraintBottom_toTopOf="@id/media_attach_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sq_feet_edit_text"/>
    <EditText
        android:id="@+id/sq_feet_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="@id/sq_feet_help_text"
        app:layout_constraintBottom_toBottomOf="@id/sq_feet_help_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sq_feet_help_text"
        />

    <Button
        android:id="@+id/media_attach_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attach a file"
        app:layout_constraintTop_toBottomOf="@id/sq_feet_help_text"
        app:layout_constraintBottom_toTopOf="@id/photo_create_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></Button>

    <Button
        android:id="@+id/photo_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take a photo"
        app:layout_constraintTop_toBottomOf="@id/media_attach_button"
        app:layout_constraintBottom_toTopOf="@id/media_RV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/video_create_button"></Button>

    <Button
        android:id="@+id/video_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take a video"
        app:layout_constraintTop_toTopOf="@id/photo_create_button"
        app:layout_constraintBottom_toBottomOf="@id/photo_create_button"
        app:layout_constraintStart_toEndOf="@id/photo_create_button"
        app:layout_constraintEnd_toEndOf="parent"></Button>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/media_RV"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/photo_create_button"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text"
        app:layout_constraintTop_toBottomOf="@id/media_RV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"></Button>
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        app:layout_constraintTop_toBottomOf="@id/media_RV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>